objects/Expense__c.object
<CustomObject>
    <description>Exnpense object</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Enter your amount</description>
        <inlineHelpText>put amount</inlineHelpText>
        <label>Amount</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Enter Event Date</description>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Enter event name</description>
        <label>Event</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_contribution__c</fullName>
        <label>total contribution</label>
        <summarizedField>Expense_Member__c.Contribution_Amount__c</summarizedField>
        <summaryForeignKey>Expense_Member__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Expense Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense_name</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Expense_contribution_rule</fullName>
        <active>true</active>
        <description>Contribution rule</description>
        <errorConditionFormula>total_contribution__c  &gt;=  Amount__c</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Contribution amount can not be greater than Amount !!</errorMessage>
    </validationRules>
</CustomObject>